added proper validation

--- a/src/generate_data_dict.ipynb
+++ b/src/generate_data_dict.ipynb
@@ -24,7 +24,8 @@
     "data_path = '../data/'\n",
     "\n",
     "train_df = pd.read_csv(os.path.join(data_path, 'train_state_action_reward_df.csv'))\n",
-    "test_df = pd.read_csv(os.path.join(data_path, 'train_state_action_reward_df.csv'))"
+    "val_df = pd.read_csv(os.path.join(data_path, 'val_state_action_reward_df.csv'))\n",
+    "test_df = pd.read_csv(os.path.join(data_path, 'test_state_action_reward_df.csv'))"
    ]
   },
   {
@@ -51,6 +52,7 @@
    "outputs": [],
    "source": [
     "feature_df_train = train_df[feature_names]\n",
+    "feature_df_val = val_df[feature_names]\n",
     "feature_df_test = test_df[feature_names]"
    ]
   },
@@ -62,26 +64,33 @@
    "source": [
     "v = DictVectorizer(sparse = False)\n",
     "feature_dict_train = feature_df_train.to_dict('records')\n",
+    "feature_dict_val = feature_df_val.to_dict('records')\n",
     "feature_dict_test = feature_df_test.to_dict('records')\n",
     "\n",
     "X_train = v.fit_transform(feature_dict_train)\n",
+    "X_val = v.transform(feature_dict_val)\n",
     "X_test = v.transform(feature_dict_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "reward_train = train_df.reward.values\n",
+    "reward_val = val_df.reward.values\n",
     "reward_test = test_df.reward.values\n",
     "\n",
     "action_train = train_df.discrete_action.values\n",
+    "action_val = val_df.discrete_action.values\n",
     "action_test = test_df.discrete_action.values\n",
     "\n",
     "state_row_id_train = [int(x) for x in train_df.row_id.values]\n",
     "next_state_row_id_train =[int(x) for x in  train_df.row_id_next.values]\n",
+    "\n",
+    "state_row_id_val = [int(x) for x in val_df.row_id.values]\n",
+    "next_state_row_id_val = [int(x) for x in val_df.row_id_next.values]\n",
     "\n",
     "state_row_id_test = [int(x) for x in test_df.row_id.values]\n",
     "next_state_row_id_test = [int(x) for x in test_df.row_id_next.values]"
@@ -89,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +107,7 @@
        "['../data/data_dict.pkl']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,8 +120,14 @@
     "                    'state_id' : state_row_id_train,\n",
     "                    'next_state_id' : next_state_row_id_train\n",
     "                },\n",
-    "         \n",
-    "          'test' : {\n",
+    "                'val' : {\n",
+    "                    'X' : X_val,\n",
+    "                    'action' : action_val,\n",
+    "                    'reward' : reward_val,\n",
+    "                    'state_id' : state_row_id_val,\n",
+    "                    'next_state_id' : next_state_row_id_val\n",
+    "                },\n",
+    "              'test' : {\n",
     "                    'X' : X_test,\n",
     "                    'action' : action_test,\n",
     "                    'reward' : reward_test,\n",
