--- a/src/prepare_df_for_tuplizing_R.ipynb
+++ b/src/prepare_df_for_tuplizing_R.ipynb
@@ -80,6 +80,17 @@
       "  interval_end_time = col_datetime(format = \"\"),\n",
       "  exclude = col_logical()\n",
       ")\n",
+      "See spec(...) for full column specifications.\n",
+      "Parsed with column specification:\n",
+      "cols(\n",
+      "  .default = col_double(),\n",
+      "  subject_id = col_integer(),\n",
+      "  hadm_id = col_integer(),\n",
+      "  icustay_id = col_integer(),\n",
+      "  interval_start_time = col_datetime(format = \"\"),\n",
+      "  interval_end_time = col_datetime(format = \"\"),\n",
+      "  exclude = col_logical()\n",
+      ")\n",
       "See spec(...) for full column specifications.\n"
      ]
     }
@@ -89,6 +100,7 @@
     "cohort_df <- read_csv(paste0(data_path, 'cohort.csv'))\n",
     "action_df <- read_csv(paste0(data_path, 'action_df.csv'))\n",
     "train_df <- read_csv(paste0(data_path, 'train_data.csv'))\n",
+    "val_df <- read_csv(paste0(data_path, 'val_data.csv'))\n",
     "test_df <- read_csv(paste0(data_path, 'test_data.csv'))"
    ]
   },
@@ -115,12 +127,22 @@
       "Joining, by = c(\"subject_id\", \"hadm_id\", \"icustay_id\", \"interval_start_time\", \"interval_end_time\")\n",
       "Joining, by = c(\"subject_id\", \"hadm_id\", \"icustay_id\")\n",
       "Joining, by = c(\"subject_id\", \"hadm_id\", \"icustay_id\", \"interval_start_time\", \"interval_end_time\")\n",
+      "Joining, by = c(\"subject_id\", \"hadm_id\", \"icustay_id\")\n",
+      "Joining, by = c(\"subject_id\", \"hadm_id\", \"icustay_id\", \"interval_start_time\", \"interval_end_time\")\n",
       "Joining, by = c(\"subject_id\", \"hadm_id\", \"icustay_id\")\n"
      ]
     }
    ],
    "source": [
     "train_df_action <- train_df %>% inner_join(select(action_df, subject_id, \n",
+    "                                                   hadm_id, \n",
+    "                                                   icustay_id, \n",
+    "                                                   interval_start_time, \n",
+    "                                                   interval_end_time,\n",
+    "                                                   discrete_action)) %>%\n",
+    "                                inner_join(cohort_df)\n",
+    "\n",
+    "val_df_action <- val_df %>% inner_join(select(action_df, subject_id, \n",
     "                                                   hadm_id, \n",
     "                                                   icustay_id, \n",
     "                                                   interval_start_time, \n",
@@ -147,6 +169,7 @@
      "output_type": "stream",
      "text": [
       "Joining, by = c(\"subject_id\", \"hadm_id\", \"icustay_id\", \"interval_start_time\", \"hospital_expire_flag\")\n",
+      "Joining, by = c(\"subject_id\", \"hadm_id\", \"icustay_id\", \"interval_start_time\", \"hospital_expire_flag\")\n",
       "Joining, by = c(\"subject_id\", \"hadm_id\", \"icustay_id\", \"interval_start_time\", \"hospital_expire_flag\")\n"
      ]
     }
@@ -161,6 +184,17 @@
     "\n",
     "train_df_action_reward <- train_df_action %>% \n",
     "                                left_join(temp_train) %>%\n",
+    "                                replace_na(list(reward = 0))\n",
+    "\n",
+    "temp_val <- val_df_action %>% group_by(subject_id, \n",
+    "                             hadm_id, \n",
+    "                             icustay_id,\n",
+    "                             hospital_expire_flag) %>%\n",
+    "                    summarise(interval_start_time = max(interval_start_time)) %>%\n",
+    "                    mutate(reward = ifelse(hospital_expire_flag, -15, 15))\n",
+    "\n",
+    "val_df_action_reward <- val_df_action %>% \n",
+    "                                left_join(temp_val) %>%\n",
     "                                replace_na(list(reward = 0))\n",
     "\n",
     "temp_test <- test_df_action %>% group_by(subject_id, \n",
@@ -187,6 +221,12 @@
     "                                group_by(subject_id, hadm_id, icustay_id) %>%\n",
     "                                mutate(row_id_next = ifelse(row_id == max(row_id), row_id, row_id + 1))\n",
     "\n",
+    "temp2_val <- val_df_action_reward %>% \n",
+    "                                mutate(row_id = 1:nrow(val_df_action_reward) - 1) %>% \n",
+    "                                arrange(subject_id, hadm_id, icustay_id, interval_start_time, row_id) %>%\n",
+    "                                group_by(subject_id, hadm_id, icustay_id) %>%\n",
+    "                                mutate(row_id_next = ifelse(row_id == max(row_id), row_id, row_id + 1))\n",
+    "\n",
     "temp2_test <- train_df_action_reward %>% \n",
     "                                mutate(row_id = 1:nrow(train_df_action_reward) - 1) %>% \n",
     "                                arrange(subject_id, hadm_id, icustay_id, interval_start_time, row_id) %>%\n",
@@ -209,6 +249,15 @@
     "                             -suspected_infection_time_poe\n",
     "                             )\n",
     "\n",
+    "final_df_val <- temp2_val %>% select(\n",
+    "                             -exclude, \n",
+    "                             -intime, \n",
+    "                             -outtime, \n",
+    "                             -window_start,\n",
+    "                             -window_end,\n",
+    "                             -suspected_infection_time_poe\n",
+    "                             )\n",
+    "\n",
     "final_df_test <- temp2_test %>% select(\n",
     "                             -exclude, \n",
     "                             -intime, \n",
@@ -221,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -737,11 +786,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "write_csv(final_df_train, paste0(data_path, 'train_state_action_reward_df.csv'))\n",
+    "write_csv(final_df_test, paste0(data_path, 'val_state_action_reward_df.csv'))\n",
     "write_csv(final_df_test, paste0(data_path, 'test_state_action_reward_df.csv'))"
    ]
   }
