--- a/src/split_data_and_impute_R.ipynb
+++ b/src/split_data_and_impute_R.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -258,26 +258,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Generate the train/test split\n",
     "set.seed(10)\n",
-    "ids <- unique(features_all$icustay_id)\n",
+    "ids <- unique(data_all$icustay_id)\n",
     "\n",
     "train_prop <- 0.8\n",
     "num_train <- floor(train_prop * length(ids))\n",
+    "\n",
     "train_ids <- sample(ids, num_train)\n",
     "test_ids <- setdiff(ids, train_ids)\n",
     "\n",
+    "# Proportion validation - of the test data\n",
+    "val_prop <- 0.5 # 0.5 of 0.2 = 0.1 total\n",
+    "num_val <- floor(val_prop * length(test_ids))\n",
+    "val_ids <- sample(test_ids, num_val)\n",
+    "test_ids <- setdiff(test_ids, val_ids)\n",
+    "\n",
     "train_id_df <- data.frame(icustay_id = train_ids)\n",
+    "val_id_df <- data.frame(icustay_id = val_ids)\n",
     "test_id_df <- data.frame(icustay_id = test_ids)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -285,18 +293,20 @@
      "output_type": "stream",
      "text": [
       "Joining, by = \"icustay_id\"\n",
+      "Joining, by = \"icustay_id\"\n",
       "Joining, by = \"icustay_id\"\n"
      ]
     }
    ],
    "source": [
     "train_data <- data_all %>% inner_join(train_id_df) %>% ungroup()\n",
+    "val_data <- data_all %>% inner_join(val_id_df) %>% ungroup()\n",
     "test_data <- data_all %>% inner_join(test_id_df) %>% ungroup()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -330,24 +340,51 @@
      "data": {
       "text/html": [
        "<ol class=list-inline>\n",
-       "\t<li>39485</li>\n",
+       "\t<li>19659</li>\n",
        "\t<li>52</li>\n",
        "</ol>\n"
       ],
       "text/latex": [
        "\\begin{enumerate*}\n",
-       "\\item 39485\n",
+       "\\item 19659\n",
        "\\item 52\n",
        "\\end{enumerate*}\n"
       ],
       "text/markdown": [
-       "1. 39485\n",
+       "1. 19659\n",
        "2. 52\n",
        "\n",
        "\n"
       ],
       "text/plain": [
-       "[1] 39485    52"
+       "[1] 19659    52"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>19826</li>\n",
+       "\t<li>52</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 19826\n",
+       "\\item 52\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 19826\n",
+       "2. 52\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 19826    52"
       ]
      },
      "metadata": {},
@@ -356,21 +393,37 @@
    ],
    "source": [
     "dim(train_data)\n",
+    "dim(val_data)\n",
     "dim(test_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required package: lattice\n",
+      "\n",
+      "Attaching package: ‘caret’\n",
+      "\n",
+      "The following object is masked from ‘package:purrr’:\n",
+      "\n",
+      "    lift\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(caret)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,12 +435,13 @@
     "                           'interval_end_time',\n",
     "                           'exclude'))\n",
     "train_features <- train_data[, feature_names]\n",
+    "val_features <- val_data[, feature_names]\n",
     "test_features <- test_data[, feature_names]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,12 +449,13 @@
     "\n",
     "preprocessor <- preProcess(train_features, method = c('center', 'scale', 'medianImpute'))\n",
     "train_proc <- predict(preprocessor, train_features)\n",
+    "val_proc <- predict(preprocessor, val_features)\n",
     "test_proc <- predict(preprocessor, test_features)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,6 +470,7 @@
     "# test_out <- cbind(test_proc, test_data[, !(names(test_data) %in% names(test_proc))])\n",
     "\n",
     "train_out <- cbind(train_data[, !(names(train_data) %in% names(train_proc))], train_proc)\n",
+    "val_out <- cbind(val_data[, !(names(val_data) %in% names(val_proc))], val_proc)\n",
     "test_out <- cbind(test_data[, !(names(test_data) %in% names(test_proc))], test_proc)\n",
     "\n",
     "\n",
@@ -425,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -509,11 +565,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "write_csv(train_out, paste0(data_path, 'train_data.csv'))\n",
+    "write_csv(train_out, paste0(data_path, 'val_data.csv'))\n",
     "write_csv(test_out, paste0(data_path, 'test_data.csv'))"
    ]
   }
