--- a/src/README
+++ b/src/README
@@ -1,4 +1,4 @@
-Order to run files (I'm sorry):
+Order to run notebook files (I'm sorry):
 
 # Setting up the files
 create_action_space_R.ipynb
@@ -6,3 +6,4 @@ process_vitals_labs_R.ipynb
 split_data_and_impute_R.ipynb
 prepare_df_for_tupilizing.ipynb
 generate_data_dict.ipynb
+train_model_scratch.ipynb
