fixed validation vs train

--- a/src/prepare_df_for_tuplizing_R.ipynb
+++ b/src/prepare_df_for_tuplizing_R.ipynb
@@ -791,7 +791,7 @@
    "outputs": [],
    "source": [
     "write_csv(final_df_train, paste0(data_path, 'train_state_action_reward_df.csv'))\n",
-    "write_csv(final_df_test, paste0(data_path, 'val_state_action_reward_df.csv'))\n",
+    "write_csv(final_df_val, paste0(data_path, 'val_state_action_reward_df.csv'))\n",
     "write_csv(final_df_test, paste0(data_path, 'test_state_action_reward_df.csv'))"
    ]
   }
