--- a/src/split_data_and_impute_R.ipynb
+++ b/src/split_data_and_impute_R.ipynb
@@ -565,12 +565,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>154525</li>\n",
+       "\t<li>52</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 154525\n",
+       "\\item 52\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 154525\n",
+       "2. 52\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 154525     52"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>19659</li>\n",
+       "\t<li>52</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 19659\n",
+       "\\item 52\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 19659\n",
+       "2. 52\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 19659    52"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>19826</li>\n",
+       "\t<li>52</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 19826\n",
+       "\\item 52\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 19826\n",
+       "2. 52\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 19826    52"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "dim(train_out)\n",
+    "dim(val_out)\n",
+    "dim(test_out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "write_csv(train_out, paste0(data_path, 'train_data.csv'))\n",
-    "write_csv(train_out, paste0(data_path, 'val_data.csv'))\n",
+    "write_csv(val_out, paste0(data_path, 'val_data.csv'))\n",
     "write_csv(test_out, paste0(data_path, 'test_data.csv'))"
    ]
   }
