--- a/src/train_model_scratch.ipynb
+++ b/src/train_model_scratch.ipynb
@@ -96,18 +96,17 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(153569, 46)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(153569, 46)\n",
+      "(19540, 46)\n"
+     ]
     }
    ],
    "source": [
-    "data_dict['train']['X'].shape"
+    "print(data_dict['train']['X'].shape)\n",
+    "print(data_dict['val']['X'].shape)\n"
    ]
   },
   {
@@ -163,374 +162,90 @@
       "Epoch 0/99\n",
       "----------\n",
       "Updating Target Model\n",
-      "train Loss: 1.410401, Best Value: 0.820800, Empirical Value: 0.066326\n",
-      "val Loss: 1.569660, Best Value: 0.792363, Empirical Value: 0.086020\n",
+      "train Loss: 1.423674, Best Value: 0.635803, Empirical Value: -0.194977\n",
+      "val Loss: 1.591676, Best Value: 0.607954, Empirical Value: -0.159891\n",
       "Best Value updated\n",
       "----------\n",
       "Epoch 1/99\n",
       "----------\n",
-      "train Loss: 1.419766, Best Value: 0.968574, Empirical Value: 0.380415\n",
-      "val Loss: 1.353072, Best Value: 1.068829, Empirical Value: 0.570541\n",
+      "train Loss: 1.444079, Best Value: 0.804370, Empirical Value: 0.150163\n",
+      "val Loss: 1.328656, Best Value: 0.925831, Empirical Value: 0.350447\n",
       "Best Value updated\n",
       "----------\n",
       "Epoch 2/99\n",
       "----------\n",
-      "train Loss: 1.341967, Best Value: 1.101373, Empirical Value: 0.648538\n",
-      "val Loss: 1.335076, Best Value: 1.096483, Empirical Value: 0.686933\n",
+      "train Loss: 1.339452, Best Value: 0.961703, Empirical Value: 0.447062\n",
+      "val Loss: 1.297089, Best Value: 0.983865, Empirical Value: 0.503225\n",
       "Best Value updated\n",
       "----------\n",
       "Epoch 3/99\n",
       "----------\n",
-      "train Loss: 1.333891, Best Value: 1.092328, Empirical Value: 0.700453\n",
-      "val Loss: 1.330344, Best Value: 1.061778, Empirical Value: 0.691975\n",
+      "train Loss: 1.324837, Best Value: 0.963877, Empirical Value: 0.522545\n",
+      "val Loss: 1.290932, Best Value: 0.935136, Empirical Value: 0.521515\n",
       "----------\n",
       "Epoch 4/99\n",
       "----------\n",
-      "train Loss: 1.331324, Best Value: 1.055440, Empirical Value: 0.695545\n",
-      "val Loss: 1.330550, Best Value: 0.977940, Empirical Value: 0.657962\n",
+      "train Loss: 1.320989, Best Value: 0.919744, Empirical Value: 0.527066\n",
+      "val Loss: 1.288822, Best Value: 0.898995, Empirical Value: 0.520884\n",
       "----------\n",
       "Epoch 5/99\n",
       "----------\n",
-      "train Loss: 1.330095, Best Value: 1.020126, Empirical Value: 0.677445\n",
-      "val Loss: 1.328665, Best Value: 0.999250, Empirical Value: 0.663257\n",
+      "train Loss: 1.319315, Best Value: 0.871553, Empirical Value: 0.514113\n",
+      "val Loss: 1.288158, Best Value: 0.845827, Empirical Value: 0.503388\n",
       "----------\n",
       "Epoch 6/99\n",
       "----------\n",
-      "train Loss: 1.329464, Best Value: 0.987959, Empirical Value: 0.652077\n",
-      "val Loss: 1.327100, Best Value: 0.972847, Empirical Value: 0.638376\n",
+      "train Loss: 1.318191, Best Value: 0.831368, Empirical Value: 0.502121\n",
+      "val Loss: 1.287236, Best Value: 0.810955, Empirical Value: 0.495433\n",
       "----------\n",
       "Epoch 7/99\n",
       "----------\n",
-      "train Loss: 1.327850, Best Value: 0.962207, Empirical Value: 0.628300\n",
-      "val Loss: 1.325608, Best Value: 0.940230, Empirical Value: 0.613401\n",
+      "train Loss: 1.318061, Best Value: 0.793778, Empirical Value: 0.485985\n",
+      "val Loss: 1.287418, Best Value: 0.775126, Empirical Value: 0.475209\n",
       "----------\n",
       "Epoch 8/99\n",
       "----------\n",
-      "train Loss: 1.326725, Best Value: 0.945303, Empirical Value: 0.612125\n",
-      "val Loss: 1.324690, Best Value: 0.934370, Empirical Value: 0.602986\n",
+      "train Loss: 1.318447, Best Value: 0.762179, Empirical Value: 0.468394\n",
+      "val Loss: 1.288917, Best Value: 0.744671, Empirical Value: 0.454635\n",
       "----------\n",
       "Epoch 9/99\n",
       "----------\n",
-      "train Loss: 1.324789, Best Value: 0.932509, Empirical Value: 0.600030\n",
-      "val Loss: 1.322973, Best Value: 0.926610, Empirical Value: 0.594131\n",
+      "train Loss: 1.319257, Best Value: 0.731601, Empirical Value: 0.445531\n",
+      "val Loss: 1.289922, Best Value: 0.713494, Empirical Value: 0.428794\n",
       "----------\n",
       "Epoch 10/99\n",
       "----------\n",
       "Updating Target Model\n",
-      "train Loss: 1.323533, Best Value: 0.921450, Empirical Value: 0.588744\n",
-      "val Loss: 1.357804, Best Value: 0.900592, Empirical Value: 0.573247\n",
+      "train Loss: 1.319861, Best Value: 0.704277, Empirical Value: 0.422459\n",
+      "val Loss: 1.306960, Best Value: 0.685088, Empirical Value: 0.404793\n",
       "----------\n",
       "Epoch 11/99\n",
       "----------\n",
-      "train Loss: 1.316352, Best Value: 1.073618, Empirical Value: 0.816454\n",
-      "val Loss: 1.309551, Best Value: 1.106341, Empirical Value: 0.865944\n",
-      "Best Value updated\n",
+      "train Loss: 1.305425, Best Value: 0.839586, Empirical Value: 0.622778\n",
+      "val Loss: 1.268430, Best Value: 0.868388, Empirical Value: 0.667601\n",
       "----------\n",
       "Epoch 12/99\n",
       "----------\n",
-      "train Loss: 1.309896, Best Value: 1.116031, Empirical Value: 0.872260\n",
-      "val Loss: 1.308311, Best Value: 1.117449, Empirical Value: 0.870329\n",
-      "Best Value updated\n",
+      "train Loss: 1.299925, Best Value: 0.869517, Empirical Value: 0.672292\n",
+      "val Loss: 1.267623, Best Value: 0.856973, Empirical Value: 0.663327\n",
       "----------\n",
       "Epoch 13/99\n",
       "----------\n",
-      "train Loss: 1.308979, Best Value: 1.116729, Empirical Value: 0.870048\n",
-      "val Loss: 1.307671, Best Value: 1.117831, Empirical Value: 0.870545\n",
-      "Best Value updated\n",
+      "train Loss: 1.299199, Best Value: 0.865962, Empirical Value: 0.671586\n",
+      "val Loss: 1.267353, Best Value: 0.855484, Empirical Value: 0.662442\n",
       "----------\n",
       "Epoch 14/99\n",
       "----------\n",
-      "train Loss: 1.308403, Best Value: 1.118152, Empirical Value: 0.868934\n",
-      "val Loss: 1.307138, Best Value: 1.120720, Empirical Value: 0.870238\n",
-      "Best Value updated\n",
+      "train Loss: 1.298850, Best Value: 0.862327, Empirical Value: 0.669679\n",
+      "val Loss: 1.266868, Best Value: 0.853059, Empirical Value: 0.661825\n",
       "----------\n",
       "Epoch 15/99\n",
       "----------\n",
-      "train Loss: 1.308010, Best Value: 1.117286, Empirical Value: 0.866098\n",
-      "val Loss: 1.307050, Best Value: 1.108437, Empirical Value: 0.856655\n",
+      "train Loss: 1.298476, Best Value: 0.859582, Empirical Value: 0.667468\n",
+      "val Loss: 1.266937, Best Value: 0.849596, Empirical Value: 0.662380\n",
       "----------\n",
       "Epoch 16/99\n",
-      "----------\n",
-      "train Loss: 1.307690, Best Value: 1.115898, Empirical Value: 0.863245\n",
-      "val Loss: 1.306625, Best Value: 1.092574, Empirical Value: 0.846182\n",
-      "----------\n",
-      "Epoch 17/99\n",
-      "----------\n",
-      "train Loss: 1.307393, Best Value: 1.115527, Empirical Value: 0.860655\n",
-      "val Loss: 1.306556, Best Value: 1.097995, Empirical Value: 0.843635\n",
-      "----------\n",
-      "Epoch 18/99\n",
-      "----------\n",
-      "train Loss: 1.307296, Best Value: 1.114192, Empirical Value: 0.856383\n",
-      "val Loss: 1.306403, Best Value: 1.100048, Empirical Value: 0.842652\n",
-      "----------\n",
-      "Epoch 19/99\n",
-      "----------\n",
-      "train Loss: 1.307090, Best Value: 1.113300, Empirical Value: 0.853011\n",
-      "val Loss: 1.306145, Best Value: 1.101403, Empirical Value: 0.842971\n",
-      "----------\n",
-      "Epoch 20/99\n",
-      "----------\n",
-      "Updating Target Model\n",
-      "train Loss: 1.307125, Best Value: 1.111884, Empirical Value: 0.850019\n",
-      "val Loss: 1.332478, Best Value: 1.113450, Empirical Value: 0.848768\n",
-      "----------\n",
-      "Epoch 21/99\n",
-      "----------\n",
-      "train Loss: 1.308115, Best Value: 1.254027, Empirical Value: 1.047239\n",
-      "val Loss: 1.304949, Best Value: 1.273052, Empirical Value: 1.067548\n",
-      "Best Value updated\n",
-      "----------\n",
-      "Epoch 22/99\n",
-      "----------\n",
-      "train Loss: 1.305448, Best Value: 1.279669, Empirical Value: 1.071589\n",
-      "val Loss: 1.304483, Best Value: 1.269228, Empirical Value: 1.062864\n",
-      "----------\n",
-      "Epoch 23/99\n",
-      "----------\n",
-      "train Loss: 1.305154, Best Value: 1.284491, Empirical Value: 1.072787\n",
-      "val Loss: 1.304298, Best Value: 1.276052, Empirical Value: 1.061339\n",
-      "Best Value updated\n",
-      "----------\n",
-      "Epoch 24/99\n",
-      "----------\n",
-      "train Loss: 1.305076, Best Value: 1.287098, Empirical Value: 1.071107\n",
-      "val Loss: 1.303962, Best Value: 1.279517, Empirical Value: 1.063910\n",
-      "Best Value updated\n",
-      "----------\n",
-      "Epoch 25/99\n",
-      "----------\n",
-      "train Loss: 1.304827, Best Value: 1.289957, Empirical Value: 1.071544\n",
-      "val Loss: 1.303829, Best Value: 1.284638, Empirical Value: 1.064893\n",
-      "Best Value updated\n",
-      "----------\n",
-      "Epoch 26/99\n",
-      "----------\n",
-      "train Loss: 1.304791, Best Value: 1.291404, Empirical Value: 1.070559\n",
-      "val Loss: 1.303953, Best Value: 1.281872, Empirical Value: 1.061200\n",
-      "----------\n",
-      "Epoch 27/99\n",
-      "----------\n",
-      "train Loss: 1.304634, Best Value: 1.291580, Empirical Value: 1.069792\n",
-      "val Loss: 1.303869, Best Value: 1.273157, Empirical Value: 1.053949\n",
-      "----------\n",
-      "Epoch 28/99\n",
-      "----------\n",
-      "train Loss: 1.304496, Best Value: 1.292121, Empirical Value: 1.070221\n",
-      "val Loss: 1.303789, Best Value: 1.283152, Empirical Value: 1.062916\n",
-      "----------\n",
-      "Epoch 29/99\n",
-      "----------\n",
-      "train Loss: 1.304632, Best Value: 1.292667, Empirical Value: 1.069211\n",
-      "val Loss: 1.303683, Best Value: 1.292879, Empirical Value: 1.069725\n",
-      "Best Value updated\n",
-      "----------\n",
-      "Epoch 30/99\n",
-      "----------\n",
-      "Updating Target Model\n",
-      "train Loss: 1.304508, Best Value: 1.291850, Empirical Value: 1.067439\n",
-      "val Loss: 1.318099, Best Value: 1.293372, Empirical Value: 1.071335\n",
-      "Best Value updated\n",
-      "----------\n",
-      "Epoch 31/99\n",
-      "----------\n",
-      "train Loss: 1.304830, Best Value: 1.405500, Empirical Value: 1.224840\n",
-      "val Loss: 1.302740, Best Value: 1.414526, Empirical Value: 1.234672\n",
-      "Best Value updated\n",
-      "----------\n",
-      "Epoch 32/99\n",
-      "----------\n",
-      "train Loss: 1.303477, Best Value: 1.420553, Empirical Value: 1.238335\n",
-      "val Loss: 1.302559, Best Value: 1.415576, Empirical Value: 1.235656\n",
-      "Best Value updated\n",
-      "----------\n",
-      "Epoch 33/99\n",
-      "----------\n",
-      "train Loss: 1.303259, Best Value: 1.423158, Empirical Value: 1.239370\n",
-      "val Loss: 1.302851, Best Value: 1.398258, Empirical Value: 1.213802\n",
-      "----------\n",
-      "Epoch 34/99\n",
-      "----------\n",
-      "train Loss: 1.303138, Best Value: 1.424204, Empirical Value: 1.237825\n",
-      "val Loss: 1.302136, Best Value: 1.422859, Empirical Value: 1.237553\n",
-      "Best Value updated\n",
-      "----------\n",
-      "Epoch 35/99\n",
-      "----------\n",
-      "train Loss: 1.303050, Best Value: 1.425904, Empirical Value: 1.238089\n",
-      "val Loss: 1.305163, Best Value: 1.359020, Empirical Value: 1.185226\n",
-      "----------\n",
-      "Epoch 36/99\n",
-      "----------\n",
-      "train Loss: 1.302885, Best Value: 1.427316, Empirical Value: 1.237902\n",
-      "val Loss: 1.302147, Best Value: 1.412120, Empirical Value: 1.225042\n",
-      "----------\n",
-      "Epoch 37/99\n",
-      "----------\n",
-      "train Loss: 1.302936, Best Value: 1.427092, Empirical Value: 1.237550\n",
-      "val Loss: 1.302008, Best Value: 1.431445, Empirical Value: 1.241977\n",
-      "Best Value updated\n",
-      "----------\n",
-      "Epoch 38/99\n",
-      "----------\n",
-      "train Loss: 1.302848, Best Value: 1.427561, Empirical Value: 1.237457\n",
-      "val Loss: 1.302122, Best Value: 1.411097, Empirical Value: 1.222703\n",
-      "----------\n",
-      "Epoch 39/99\n",
-      "----------\n",
-      "train Loss: 1.302840, Best Value: 1.426437, Empirical Value: 1.236039\n",
-      "val Loss: 1.302001, Best Value: 1.413876, Empirical Value: 1.223620\n",
-      "----------\n",
-      "Epoch 40/99\n",
-      "----------\n",
-      "Updating Target Model\n",
-      "train Loss: 1.302858, Best Value: 1.426785, Empirical Value: 1.235732\n",
-      "val Loss: 1.309376, Best Value: 1.413605, Empirical Value: 1.223837\n",
-      "----------\n",
-      "Epoch 41/99\n",
-      "----------\n",
-      "train Loss: 1.302179, Best Value: 1.505113, Empirical Value: 1.341515\n",
-      "val Loss: 1.300885, Best Value: 1.500861, Empirical Value: 1.338282\n",
-      "Best Value updated\n",
-      "----------\n",
-      "Epoch 42/99\n",
-      "----------\n",
-      "train Loss: 1.301499, Best Value: 1.514507, Empirical Value: 1.349081\n",
-      "val Loss: 1.300603, Best Value: 1.502941, Empirical Value: 1.337670\n",
-      "Best Value updated\n",
-      "----------\n",
-      "Epoch 43/99\n",
-      "----------\n",
-      "train Loss: 1.301380, Best Value: 1.516142, Empirical Value: 1.349164\n",
-      "val Loss: 1.300442, Best Value: 1.516479, Empirical Value: 1.350290\n",
-      "Best Value updated\n",
-      "----------\n",
-      "Epoch 44/99\n",
-      "----------\n",
-      "train Loss: 1.301282, Best Value: 1.518148, Empirical Value: 1.350037\n",
-      "val Loss: 1.300336, Best Value: 1.517453, Empirical Value: 1.348133\n",
-      "Best Value updated\n",
-      "----------\n",
-      "Epoch 45/99\n",
       "----------\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "train Loss: 1.301164, Best Value: 1.518359, Empirical Value: 1.348870\n",
-      "val Loss: 1.300374, Best Value: 1.502448, Empirical Value: 1.333195\n",
-      "----------\n",
-      "Epoch 46/99\n",
-      "----------\n",
-      "train Loss: 1.301140, Best Value: 1.518078, Empirical Value: 1.348939\n",
-      "val Loss: 1.300259, Best Value: 1.509144, Empirical Value: 1.339249\n",
-      "----------\n",
-      "Epoch 47/99\n",
-      "----------\n",
-      "train Loss: 1.301095, Best Value: 1.518449, Empirical Value: 1.348129\n",
-      "val Loss: 1.300324, Best Value: 1.504757, Empirical Value: 1.338632\n",
-      "----------\n",
-      "Epoch 48/99\n",
-      "----------\n",
-      "train Loss: 1.300928, Best Value: 1.518932, Empirical Value: 1.349358\n",
-      "val Loss: 1.300203, Best Value: 1.507633, Empirical Value: 1.338697\n",
-      "----------\n",
-      "Epoch 49/99\n",
-      "----------\n",
-      "train Loss: 1.300999, Best Value: 1.517788, Empirical Value: 1.347596\n",
-      "val Loss: 1.300104, Best Value: 1.505857, Empirical Value: 1.336965\n",
-      "----------\n",
-      "Epoch 50/99\n",
-      "----------\n",
-      "Updating Target Model\n",
-      "train Loss: 1.300968, Best Value: 1.519144, Empirical Value: 1.349097\n",
-      "val Loss: 1.304703, Best Value: 1.502587, Empirical Value: 1.332102\n",
-      "----------\n",
-      "Epoch 51/99\n",
-      "----------\n",
-      "train Loss: 1.300398, Best Value: 1.576202, Empirical Value: 1.424557\n",
-      "val Loss: 1.299208, Best Value: 1.587795, Empirical Value: 1.436945\n",
-      "Best Value updated\n",
-      "----------\n",
-      "Epoch 52/99\n",
-      "----------\n",
-      "train Loss: 1.299994, Best Value: 1.584937, Empirical Value: 1.431319\n",
-      "val Loss: 1.299033, Best Value: 1.581793, Empirical Value: 1.426487\n",
-      "----------\n",
-      "Epoch 53/99\n",
-      "----------\n",
-      "train Loss: 1.299832, Best Value: 1.586194, Empirical Value: 1.431147\n",
-      "val Loss: 1.302026, Best Value: 1.517952, Empirical Value: 1.376001\n",
-      "----------\n",
-      "Epoch 54/99\n",
-      "----------\n",
-      "train Loss: 1.299781, Best Value: 1.586512, Empirical Value: 1.430527\n",
-      "val Loss: 1.299017, Best Value: 1.570699, Empirical Value: 1.416908\n",
-      "----------\n",
-      "Epoch 55/99\n",
-      "----------\n",
-      "train Loss: 1.299719, Best Value: 1.587437, Empirical Value: 1.431005\n",
-      "val Loss: 1.298833, Best Value: 1.576034, Empirical Value: 1.420847\n",
-      "----------\n",
-      "Epoch 56/99\n",
-      "----------\n",
-      "train Loss: 1.299646, Best Value: 1.587188, Empirical Value: 1.430846\n",
-      "val Loss: 1.298842, Best Value: 1.577381, Empirical Value: 1.418968\n",
-      "----------\n",
-      "Epoch 57/99\n",
-      "----------\n",
-      "train Loss: 1.299662, Best Value: 1.588669, Empirical Value: 1.430567\n",
-      "val Loss: 1.298893, Best Value: 1.573006, Empirical Value: 1.417435\n",
-      "----------\n",
-      "Epoch 58/99\n",
-      "----------\n",
-      "train Loss: 1.299572, Best Value: 1.587426, Empirical Value: 1.430021\n",
-      "val Loss: 1.298835, Best Value: 1.579526, Empirical Value: 1.422841\n",
-      "----------\n",
-      "Epoch 59/99\n",
-      "----------\n",
-      "train Loss: 1.299482, Best Value: 1.588030, Empirical Value: 1.430732\n",
-      "val Loss: 1.298667, Best Value: 1.582468, Empirical Value: 1.425529\n",
-      "----------\n",
-      "Epoch 60/99\n",
-      "----------\n",
-      "Updating Target Model\n",
-      "train Loss: 1.299564, Best Value: 1.588239, Empirical Value: 1.429951\n",
-      "val Loss: 1.301571, Best Value: 1.573743, Empirical Value: 1.420349\n",
-      "----------\n",
-      "Epoch 61/99\n",
-      "----------\n",
-      "train Loss: 1.299267, Best Value: 1.637565, Empirical Value: 1.492647\n",
-      "val Loss: 1.298079, Best Value: 1.630124, Empirical Value: 1.483945\n",
-      "Best Value updated\n",
-      "----------\n",
-      "Epoch 62/99\n",
-      "----------\n",
-      "train Loss: 1.298815, Best Value: 1.642384, Empirical Value: 1.496477\n",
-      "val Loss: 1.297928, Best Value: 1.626300, Empirical Value: 1.483394\n",
-      "----------\n",
-      "Epoch 63/99\n",
-      "----------\n",
-      "train Loss: 1.298713, Best Value: 1.643966, Empirical Value: 1.497400\n",
-      "val Loss: 1.297797, Best Value: 1.634540, Empirical Value: 1.487108\n",
-      "Best Value updated\n",
-      "----------\n",
-      "Epoch 64/99\n",
-      "----------\n",
-      "train Loss: 1.298701, Best Value: 1.644426, Empirical Value: 1.496897\n",
-      "val Loss: 1.297960, Best Value: 1.627337, Empirical Value: 1.481580\n",
-      "----------\n",
-      "Epoch 65/99\n",
-      "----------\n",
-      "train Loss: 1.298607, Best Value: 1.645579, Empirical Value: 1.497045\n",
-      "val Loss: 1.297673, Best Value: 1.641137, Empirical Value: 1.493311\n",
-      "Best Value updated\n",
-      "----------\n",
-      "Epoch 66/99\n",
-      "----------\n",
-      "train Loss: 1.298583, Best Value: 1.644744, Empirical Value: 1.495835\n"
      ]
     }
    ],
