Fix reward at terminal state

--- a/src/plot_hyperparams.ipynb
+++ b/src/plot_hyperparams.ipynb
@@ -513,8 +513,7 @@
     "                    xlab('Numer of Hidden Layers') + \n",
     "                    ylab('Estimated Optimal Q') + \n",
     "                    scale_x_continuous(breaks = c(1, 2,3, 5, 10)) + \n",
-    "                    scale_color_discrete('Dimension of Hidden Layers') + theme_bw()\n",
-    "                "
+    "                    scale_color_discrete('Dimension of Hidden Layers') + theme_bw()"
    ]
   }
  ],
